--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.12",
+    "@peterek/vite-plugin-favicons": "^2.0.0",
     "classnames": "^2.5.1",
+    "favicons-webpack-plugin": "^6.0.1",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
