--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.71.1",
     "sharp": "^0.33.2"
