--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.15.12",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "classnames": "^2.5.1",
     "favicons-webpack-plugin": "^6.0.1",
     "install": "^0.13.0",
